feat: Complete TypeScript tasks 0-11
- Task 0: Student interface and table rendering
- Task 1: Teacher interface with readonly properties
- Task 2: Directors interface extending Teacher
- Task 3: printTeacher function
- Task 4: StudentClass with interfaces
- Task 5: Director and Teacher interfaces with createEmployee
- Task 6: isDirector type predicate and executeWork
- Task 7: String literal types with teachClass
- Task 8: Ambient namespaces and CRUD operations
- Task 9-10: Namespaces with Subjects and Teachers
- Task 11: Brand convention & Nominal typing

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,21 @@ node_modules/
 # Build outputs
 dist/
 */dist/
-*.js
-*.js.map
-*.d.ts
 temp/
+
+# Compiled JavaScript (but NOT configuration files)
+*.js
+!webpack.config.js
+!*.config.js
+!.eslintrc.js
+!crud.js
+
+# Compiled TypeScript declarations (but NOT source declarations)
+*.d.ts
+!crud.d.ts
+
+# Source maps
+*.js.map
 
 # Environment variables
 .env
